# qrelllm

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  eskeeper.yml  eval.py  gen_dataset_openai_batch.py  gen_dataset_vertex_batch.py  gen_queries.py  mapping.json  pipeline.json  pyproject.toml
notebook/: batch_sample.ipynb  compare.ipynb  eval.ipynb  openai.ipynb  qrelllm.ipynb  rankx_example.ipynb  search_queries.ipynb  vertex.ipynb  vertex_rel_only.ipynb
qrelllm/: batch.py  eval.py  format.py  queries.py
qrelllm/download/: download_gcs.py
qrelllm/es/: es.py
qrelllm/llm/: openai.py  prompt.py  vertex.py
qrelllm/upload/: gcs.py  openai.py
